--- a/popup.html
+++ b/popup.html
@@ -12,18 +12,39 @@
 </head>
 
 <body>
-  <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Select a language
-    </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <a class="dropdown-item" href="#">English</a>
-      <a class="dropdown-item" href="#">French</a>
-      <a class="dropdown-item" href="#">Klingon</a>
+
+  <div class="container">
+    <h4>Login to Duolingo</h4>
+    <form>
+
+      <div class="form-group">
+        <input name="email" type="email" class="form-control" id="inputEmail" placeholder="Email address" required autofocus>
+      </div>
+
+      <div class="form-group">
+        <input name="password" type="password" class="form-control" id="inputPassword" placeholder="Password" required>
+      </div>
+
+      <button id="submitBtn" type="submit" class="btn btn-primary">Login</button>
+
+    </form>
+  </div>
+
+  <div class="container-fluid">
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Select a language
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#">English</a>
+        <a class="dropdown-item" href="#">French</a>
+        <a class="dropdown-item" href="#">Klingon</a>
+      </div>
     </div>
   </div>
 
-  <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>  
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
