--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
 
   <div class="container">
     <h4>Login to Duolingo</h4>
-    <form>
+    <form id="loginForm">
 
       <div class="form-group">
         <input name="email" type="email" class="form-control" id="inputEmail" placeholder="Email address" required autofocus>
@@ -25,7 +25,7 @@
         <input name="password" type="password" class="form-control" id="inputPassword" placeholder="Password" required>
       </div>
 
-      <button id="submitBtn" type="submit" class="btn btn-primary">Login</button>
+      <button id="loginBtn" type="submit" class="btn btn-primary">Login</button>
 
     </form>
   </div>
