--- a/popup.html
+++ b/popup.html
@@ -15,12 +15,12 @@
 <body>
 
   <div class="container container-cust">
-    <div class="card">
+    <div class="card card-signin">
       <div class="card-header">
-        <h3 class="card-title text-center">FoodForThots</h3>
+        <h3 class="text-center">FoodForThots</h3>
       </div>
       <div class="card-body">
-        <h5 class="text-center">Login to Duolingo</h5>
+        <h5 class="text-center card-title">Login to Duolingo</h5>
         <form class="form-signin" id="loginForm">
 
           <div class="form-label-group">
