Create translation input section

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
         <h3 class="card-title text-center">FoodForThots</h3>
         <h6 class="card-subtitle mb-2 text-muted text-center">The in-browser word game</h6>
       </div>
-      <div class="card-body">
+      <div class="card-body" id="mainBody">
         <form id="startGameForm">
           <div class="dropdown text-center start-game spacer">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
