--- a/popup.html
+++ b/popup.html
@@ -23,12 +23,6 @@
             </button>
             <div class="dropdown-menu pre-scrollable" aria-labelledby="dropdownMenuButton" id="dropdownMenu">
               <input class="form-control" type="text" id="langSearch" placeholder="Search languages" aria-label="Search">
-              <a class="dropdown-item" href="#">English</a>
-              <a class="dropdown-item" href="#">French</a>
-              <a class="dropdown-item" href="#">Klingon</a>
-              <a class="dropdown-item" href="#">Swahili</a>
-              <a class="dropdown-item" href="#">Binary</a>
-              <a class="dropdown-item" href="#">Javascript</a>
             </div>
           </div>
           <div class="text-center start-game">
@@ -38,9 +32,8 @@
       </div>
     </div>
   </div>
-
-  <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>  
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="jquery-3.2.0.js"></script>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
