--- a/popup.html
+++ b/popup.html
@@ -12,8 +12,8 @@
     <div class="card card-start-game">
       <div class="card-header">
         <img src="images/icon48.png" class="rounded float-left">
-        <h3 class="card-title text-center">FoodForThots</h3>
-        <h6 class="card-subtitle mb-2 text-muted text-center">The in-browser word game</h6>
+        <h3 class="card-title text-center" style="color:white">FoodForThots</h3>
+        <h6 class="card-subtitle mb-2 text-center" style="color:white">The in-browser word game</h6>
       </div>
       <div class="card-body" id="mainBody">
         <form id="startGameForm">
